crates/hir-ty/tests/snapshots/jls_annotation_elements__abrupt_expression_value.snap
---
source: crates/hir-ty/tests/jls_annotation_elements.rs
expression: out
---
FILE /src/com/example/Anns.java:
package com.example;

@interface Ann {
    int i();
}

@Ann(i = 1 / 0)
class Anns {}

@6:9: non-constant-annotation-element: Attribute value must be constant
