crates/hir-ty/tests/snapshots/jls_annotation_elements__array_initializer_for_non_array_element.snap
---
source: crates/hir-ty/tests/jls_annotation_elements.rs
expression: out
---
FILE /src/com/example/Anns.java:
package com.example;

@interface Ann {
    int value();
}

@Ann(value = { 1 })
class Anns {}

@6:13: annotation-element-type-mismatch: Incompatible types. Found: 'int[]', required: 'int'
