crates/hir-ty/tests/snapshots/jls_annotation_elements__bare_enum_against_non_enum_element.snap
---
source: crates/hir-ty/tests/jls_annotation_elements.rs
expression: out
---
FILE /src/com/example/Anns.java:
package com.example;

@interface Ann {
    String value();
}

@Ann(value = FOO)
class Anns {}

@6:13: unknown-annotation-element-constant: Cannot resolve symbol 'FOO'
