crates/hir-ty/tests/snapshots/jls_annotation_elements__duplicate_member.snap
---
source: crates/hir-ty/tests/jls_annotation_elements.rs
expression: out
---
FILE /src/com/example/Anns.java:
package com.example;

@interface Ann {
    int value();
}

@Ann(value = 1, value = 2)
class Anns {}

@6:24: duplicate-annotation-member-value: Duplicate annotation member 'value'
