crates/hir-ty/tests/snapshots/jls_annotation_elements__element_free_annotation_elided_value.snap
---
source: crates/hir-ty/tests/jls_annotation_elements.rs
expression: out
---
FILE /src/com/example/Anns.java:
package com.example;

class Anns {
    @Override("")
    public String toString() {
        return "";
    }
}

@3:14: unknown-annotation-member: No annotation member named 'value'
