crates/hir-ty/tests/snapshots/jls_annotation_elements__element_free_annotation_green.snap
---
source: crates/hir-ty/tests/jls_annotation_elements.rs
expression: out
---
FILE /src/com/example/Anns.java:
package com.example;

class Anns {
    @Override
    public String toString() {
        return "";
    }
}
